--- a/public/html/editorMain.html
+++ b/public/html/editorMain.html
@@ -148,7 +148,7 @@
       </div>
     </div>
 
-    <!-- Invoice Detail View Container -->
-    <div id="edit-view" class="w-full"></div>
+    <!-- Edit View Container -->
+    <div id="edit-view" x-data="editView()" x-html="html" class="w-full"></div>
   </div>
 </div>
