--- a/public/index.html
+++ b/public/index.html
@@ -331,18 +331,23 @@
     </div>
     <!-- 1) Store definitions  -->
     <script type="module" src="/Managers/tooltip.js"></script>
-    <script type="module" src="/store/fetcher.js"></script>
+    <script type="module" src="/store/utils/fetcher.js"></script>
+    <script type="module" src="/store/utils/makeTable.js"></script>
     <script type="module" src="/store/clientStore.js"></script>
     <script type="module" src="/store/itemStore.js"></script>
-    <script type="module" src="/store/prices.js"></script>
+    <script type="module" src="/store/utils/prices.js"></script>
     <script type="module" src="/store/invoiceStore.js"></script>
     <script type="module" src="/store/pdfStore.js"></script>
     <script type="module" src="/store/edit.js"></script>
-    <script type="module" src="/store/colorTheme.js"></script>
+    <script type="module" src="/store/utils/colorTheme.js"></script>
     <script type="module" src="/store/tossStore.js"></script>
-    <script type="module" src="/store/effects.js"></script>
+    <script type="module" src="/store/utils/effects.js"></script>
     <script type="module" src="/store/customConfirm.js"></script>
-    <script type="module" src="/store/datePicker.js"></script>
+    <!-- <script type="module" src="/Managers/invoEditor/primaryEditsModal.js"></script>
+    <script type="module" src="/Managers/invoEditor/copyEditsModal.js"></script>
+    <script type="module" src="/Managers/invoEditor/editView.js"></script> -->
+    <script type="module" src="/store/utils/datePicker.js"></script>
+
     <!-- 2) Then app.js, which sets up tabManager and etc -->
     <script type="module" src="/app.js" defer></script>
     <!--  Alpine Plugins  -->
